⚙️ cleaning session ---------------------------------------- refact landing with router off atk-content-main ----------------------------------------

--- a/atkm/src/app/features/landing/landing.component.html
+++ b/atkm/src/app/features/landing/landing.component.html
@@ -19,8 +19,11 @@
   <!-- GRILLE 5: CONTENU PRINCIPAL avec BASH COMPONENT -->
   <div class="landing-main">
 
+    <router-outlet></router-outlet>
+
+
     <!-- Traditional Content -->
-    <atk-content-main [feeds]="config.feeds" [configPanelCollapsed]="bashConfigPanelCollapsed()" />
+    <!-- <atk-content-main [feeds]="config.feeds" [configPanelCollapsed]="bashConfigPanelCollapsed()" /> -->
     <!-- <atk-content-main [feeds]="config.feeds" [configPanelCollapsed]="bashConfigPanelCollapsed()" /> -->
 
     <!-- <atk-content-main [feeds]="config.feeds" [configPanelCollapsed]="bashConfigPanelCollapsed()"
