--- a/atkm/src/styles.css
+++ b/atkm/src/styles.css
@@ -58,6 +58,7 @@ atk-bash,
 atk-landing,
 atk-home-content,
 atk-bash-debug-template,
+atk-dev-integration,
 
 atk-binance-api-management,
 atk-binance-debug,
