⚙️ cleaning session ---------------------------------------- refact navbar icons ----------------------------------------

--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed">
   <header class="content-header">
-    <h1>home-content {{ configPanelCollapsed }}</h1>
+    <h1>home-content {{ configPanelCollapsed }} {{ bashConfigPanelCollapsed }}</h1>
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
