--- a/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
+++ b/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
@@ -2,29 +2,19 @@
   <menu class="menu-main">
 
     <button class="hamburger-btn" aria-label="Ouvrir le menu de navigation">
-      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-        <path
-          d="M1 2.75A.75.75 0 0 1 1.75 2h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 2.75Zm0 5A.75.75 0 0 1 1.75 7h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 7.75ZM1.75 12h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Z">
-        </path>
-      </svg>
+      <atk-icon name="hamburger" />
     </button>
+
     <button class="user-btn">
       <img src="https://avatars.githubusercontent.com/u/32144309?v=4" alt="@user" class="user-avatar" width="16"
         height="16" />
     </button>
-    <button class="action-btn">
-      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-        <path
-          d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
-        </path>
-      </svg>
+
+    <button class="navbar-btn">
+      <atk-icon name="cross" color="currentColor" />
     </button>
-    <button class="action-btn" aria-label="Créer quelque chose de nouveau">
-      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-        <path
-          d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
-        </path>
-      </svg>
+    <button class="navbar-btn" aria-label="Créer quelque chose de nouveau">
+      <atk-icon name="cross" color="currentColor" />
     </button>
     <a class="logo" [href]="config?.navbar?.logo?.link || '#'" aria-label="Homepage">
       <svg aria-hidden="true" height="40" viewBox="0 0 32 32" version="1.1" width="40">
@@ -45,6 +35,7 @@
         {{item}}
       </span>
     </nav>
+
   </menu>
 
 
