✅ feature: home-content ---------------------------------------------- 2025.10.03.111058 refact home-content reconnect to config ----------------------------------------------

--- a/atkm/src/app/features/atk-dev-integration/atk-dev-integration.component.html
+++ b/atkm/src/app/features/atk-dev-integration/atk-dev-integration.component.html
@@ -4,7 +4,7 @@
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
-      <h1>AtkDevIntegrationComponent {{ configPanelCollapsed }}</h1>
+      <h1>atomeek.dev.integration Component {{ configPanelCollapsed }}</h1>
       <div class="terminal-details">
         <h2>when data finally reaches its owner.</h2>
       </div>
