--- a/atkm/src/styles.css
+++ b/atkm/src/styles.css
@@ -290,6 +290,10 @@ atk-content-main {
   gap: 8px;
 }
 
+.navbar-nav {
+  padding-left: 20px;
+}
+
 .navbar-btn {
   background: #30363d;
   border: 1px solid #484f58;
@@ -731,7 +735,7 @@ li,
 .terminal-main {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 0px;
 }
 
 .terminal-header {
@@ -764,6 +768,12 @@ li,
   left: -30px;
 }
 
+.datatable-toggle {
+  position: absolute;
+  top: 30px;
+  left: -30px;
+}
+
 .terminal-section {
   position: relative;
   display: flex;
@@ -790,7 +800,7 @@ li,
   flex-direction: column;
   align-items: flex-start;
   flex: 1;
-  padding: 24px 20px 10px 20px;
+  padding: 20px 20px 20px 20px;
   border: 1px solid var(--color-border-default);
   border-radius: 8px;
   background: var(--color-canvas-subtle);
@@ -849,13 +859,16 @@ li,
   white-space: nowrap;
 }
 
+.infos-title {
+  padding-bottom: 10px;
+}
+
 .infos-items {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   border-radius: 8px;
   gap: 6px;
-  background: var(--color-canvas-subtle);
   font-size: .8em;
   width: 100%;
 }
@@ -868,6 +881,7 @@ li,
   padding: 8px;
   flex: 1;
   border: 1px solid var(--color-border-default);
+  background: var(--color-canvas-subtle);
   border-radius: 6px;
   transition: all 0.2s ease;
 }
@@ -954,8 +968,10 @@ li,
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  flex: auto;
+  min-width: 280px;
   gap: 12px;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   padding: 24px 20px 22px 20px;
   border: 1px solid var(--color-border-default);
   border-radius: 8px;
