⚙️ cleaning session ---------------------------------------- refact todo tags ----------------------------------------

--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -31,8 +31,8 @@
 
         <div class="section-content">
           <atk-icon class="terminal-toggle" name="triangle-down" color="var(--color-btn-bg-default)" />
-          <!-- <atk-bash configId="binance-debug-v2" [autoLoad]="true" (configRequest)="onBashConfigRequest($event)"
-            (dataLoaded)="onBashDataLoaded($event)" (errorOccurred)="onBashError($event)" /> -->
+          <atk-bash configId="binance-debug-v2" [autoLoad]="true" (configRequest)="onBashConfigRequest($event)"
+            (dataLoaded)="onBashDataLoaded($event)" (errorOccurred)="onBashError($event)" />
         </div>
       </div>
 
