--- a/atkm/src/styles.css
+++ b/atkm/src/styles.css
@@ -48,7 +48,7 @@ body {
 }
 
 /* ====================================================================================================== */
-/*  TAG: styles.css ================ CONSOLE LOG IN PROGRESS */
+/*  HACK Styles.css -> display: contents ================ CONSOLE LOG IN PROGRESS */
 /* ====================================================================================================== */
 
 router-outlet,
