--- a/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
+++ b/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
@@ -32,9 +32,9 @@
     </a>
 
     <nav class="navbar-nav" role="navigation" aria-label="ATK Breadcrumb">
-      <span *ngFor="let item of config?.navbar.breadcrumb || []; let last = last">
-        {{item}}
-      </span>
+      <!-- <span *ngFor="let item of config?.navbar.breadcrumb || []; let last = last"> -->
+      <!-- {{item}} -->
+      <!-- </span> -->
     </nav>
 
   </menu>
