--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,12 +1,12 @@
-<div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed">
+<div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed()">
   <header class="content-header">
-    <h1>home-content {{ configPanelCollapsed }} {{ config.sidebar.userContext.username }}</h1>
+    <!-- <h1>home-content {{ configPanelCollapsed }} {{ config.sidebar.userContext.username }}</h1> -->
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
       <h1>atomeek.home.content Component</h1>
       <div class="terminal-details">
-        <h2>{{ config.sidebar.userContext.title }}</h2>
+        <!-- <h2>{{ config.sidebar.userContext.title }}</h2> -->
       </div>
     </header>
     <!-- État de chargement -->
@@ -109,5 +109,5 @@
   </div>
 </div>
 
-<atk-sidebar-config [sections]="config.configPanel.sections" [isCollapsed]="config.configPanel.isCollapsed"
+<atk-sidebar-config [sections]="config().configPanel.sections" [isCollapsed]="config().configPanel.isCollapsed"
   (togglePanel)="toggleConfigPanel()" />
